--- a/src/app/home/menu/menu.component.html
+++ b/src/app/home/menu/menu.component.html
@@ -101,13 +101,19 @@
         <li>
           <a routerLink="/aggiungi-prodotto" routerLinkActive="active">
             <i class="pi pi-fw pi-plus"></i>
-            <span>Aggiungi Prodotto</span>
+            <span>Aggiungi Prodotto Excel</span>
           </a>
         </li>
         <li>
           <a routerLink="/prodotti" routerLinkActive="active">
             <i class="pi pi-fw pi-plus"></i>
             <span>Elenco Prodotti</span>
+          </a>
+        </li>
+        <li>
+          <a routerLink="/add-prodotto" routerLinkActive="active">
+            <i class="pi pi-fw pi-plus"></i>
+            <span>Aggiungi Prodotto</span>
           </a>
         </li>
       </ul>
