--- a/src/app/Fornitore/fornitori/fornitori-component.component.html
+++ b/src/app/Fornitore/fornitori/fornitori-component.component.html
@@ -26,8 +26,12 @@
             <td>{{ fornitore.numeroTelefono }}</td>
             <td>
               <!-- Aggiungi il pulsante Modifica -->
-              <button class="btn btn-primary" (click)="avviaModifica(fornitore)">Modifica</button>
-              <button class="btn btn-danger" (click)="eliminaFornitore(fornitore)">Elimina</button>
+              <button class="btn btn-primary" (click)="avviaModifica(fornitore)">
+                <i class="pi pi-file-edit"></i> <!-- Icona "Modifica" -->
+              </button>
+              <button class="btn btn-danger" (click)="eliminaFornitore(fornitore)">
+                <i class="pi pi-trash"></i> 
+              </button>
             </td>
           </tr>
           <tr *ngIf="fornitoreInModifica && fornitoreInModifica.id === fornitore.id">
