--- a/src/app/Magazzino/modifica-magazzino/modifica-magazzino.component.html
+++ b/src/app/Magazzino/modifica-magazzino/modifica-magazzino.component.html
@@ -19,8 +19,13 @@
     </div>
 
     <div class="button-group">
-      <button type="button" class="btn salva" (click)="salvaModifiche()">Salva Modifiche</button>
-      <button type="button" class="btn annulla" (click)="annulla()">Annulla</button>
+      <button type="button" class="btn salva" (click)="salvaModifiche()">
+        <i class="pi pi-save"></i> Salva Modifiche
+      </button>
+      <button type="button" class="btn annulla" (click)="annulla()">
+        <i class="pi pi-times"></i> Annulla
+      </button>
     </div>
+    
   </form>
 </div>
