--- a/src/app/Prodotto/add-prodotto/add-prodotto.component.html
+++ b/src/app/Prodotto/add-prodotto/add-prodotto.component.html
@@ -26,6 +26,10 @@
         <label for="quantita">Quantità:</label>
         <input type="number" id="quantita" [(ngModel)]="nuovoProdotto.quantita" name="quantita">
       </div>
+      <div class="form-group">
+        <label for="sottoCategoria">sottoCategoria</label>
+        <input type="number" id="sottoCategoria" [(ngModel)]="nuovoProdotto.sottoCategoria" name="sottoCategoria">
+      </div>
       
       <div class="button-group">
         <button type="submit" class="btn btn-primary">Aggiungi Prodotto</button>
