modifiche al menu e al fornitore

--- a/src/app/home/menu/menu.component.html
+++ b/src/app/home/menu/menu.component.html
@@ -11,7 +11,7 @@
       </a>
     </li>
     <li>
-      <a routerLink="" routerLinkActive="active">
+      <a routerLink="/fornitori" routerLinkActive="active">
         <i class="pi pi-fw pi-truck"></i>
         <span>Gestione Fornitori</span>
       </a>
@@ -31,7 +31,7 @@
       </ul>
     </li>
     <li>
-      <a routerLink="" routerLinkActive="active">
+      <a routerLink="/magazzini" routerLinkActive="active">
         <i class="pi pi-fw pi-building"></i>
         <span>Gestione Magazzini</span>
       </a>
@@ -51,7 +51,7 @@
       </ul>
     </li>
     <li>
-      <a routerLink="" routerLinkActive="active">
+      <a routerLink="/clienti" routerLinkActive="active">
         <i class="pi pi-fw pi-user"></i>
         <span>Gestione Clienti</span>
       </a>
@@ -93,7 +93,7 @@
       </ul>
     </li>
     <li>
-      <a routerLink="" routerLinkActive="active">
+      <a routerLink="/prodotti" routerLinkActive="active">
         <i class="pi pi-fw pi-shopping-cart"></i>
         <span>Gestione Prodotti</span>
       </a>
